Actualización de imágenes y rutas

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,11 @@
   <div class="navbar-container">
 
     <div class="nav-left">
-      <img src="/src/assets/profile.jpeg" class="nav-profile" alt="Foto Adrián" />
+      <img 
+        src={`${import.meta.env.BASE_URL}profile.jpeg`} 
+        class="nav-profile" 
+        alt="Foto Adrián" 
+      />
       <span class="nav-name">Adrián Ruiz Robles</span>
     </div>
 
